--- a/HomeWork10/src/main/resources/templates/_template.html
+++ b/HomeWork10/src/main/resources/templates/_template.html
@@ -1,6 +1,6 @@
 <div id="header" xmlns:th="http://www.thymeleaf.org" th:fragment="header">
     <div>
-        <h1 class="title" th:text="#{welcome.message (${user})}">Hello, people!</h1>
+        <h1 class="title" th:text="#{welcome.message (${user})}">Hello!</h1>
     </div>
 </div>
 <div id="footer" xmlns:th="http://www.thymeleaf.org" th:fragment="footer">
