--- a/HomeWork11/src/main/resources/templates/admin.html
+++ b/HomeWork11/src/main/resources/templates/admin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Log in with your account</title>
 	 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="../static/style.css" th:href="@{/style.css}">
+    <link rel="stylesheet" type="text/css" href="../static/style.css" th:href="@{/style.css}">
 </head>
 <body>
 <th:block th:insert="~{_template :: menu}"/>
@@ -36,7 +36,7 @@
       </tr>
     </c:forEach>
   </table>
-  <a href="/">Главная</a>
+  <a href="/">Р“Р»Р°РІРЅР°СЏ</a>
 </div>
 </body>
 </html>
