--- a/HomeWork11/src/main/resources/templates/index.html
+++ b/HomeWork11/src/main/resources/templates/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
-    <title>Главная страница</title>
+    <title>Р“Р»Р°РІРЅР°СЏ СЃС‚СЂР°РЅРёС†Р°</title>
 	 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="../static/style.css" th:href="@{/style.css}">
+    <link rel="stylesheet" type="text/css" href="../static/style.css" th:href="@{/style.css}">
 </head>
 <body>
 <th:block th:insert="~{_template :: menu}"/>
 <div>
   <h3>${pageContext.request.userPrincipal.name}</h3>
   <sec:authorize access="!isAuthenticated()">
-    <h4><a href="/login">Войти</a></h4>
-    <h4><a href="/registration">Зарегистрироваться</a></h4>
+    <h4><a href="/login">Р’РѕР№С‚Рё</a></h4>
+    <h4><a href="/registration">Р—Р°СЂРµРіРёСЃС‚СЂРёСЂРѕРІР°С‚СЊСЃСЏ</a></h4>
   </sec:authorize>
   <sec:authorize access="isAuthenticated()">
-    <h4><a href="/logout">Выйти</a></h4>
+    <h4><a href="/logout">Р’С‹Р№С‚Рё</a></h4>
   </sec:authorize>
-  <h4><a href="/news">Новости (только пользователь)</a></h4>
-  <h4><a href="/admin">Пользователи (только админ)</a></h4>
+  <h4><a href="/admin">РџРѕР»СЊР·РѕРІР°С‚РµР»Рё (С‚РѕР»СЊРєРѕ Р°РґРјРёРЅ)</a></h4>
 </div>
     </div>
     <th:block th:insert="~{_template :: footer}"/>
