--- a/HomeWork11/src/main/resources/templates/products.html
+++ b/HomeWork11/src/main/resources/templates/products.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Список продуктов</title>
 	 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="../static/style.css" th:href="@{/style.css}">
+    <link rel="stylesheet" type="text/css" href="../static/style.css" th:href="@{/style.css}">
 </head>
 <body>
 <th:block th:insert="~{_template :: menu}"/>
